app/globals.css
:root {
  --color-foreground-rgb: 92, 70, 54;
  --color-foreground: rgba(var(--color-foreground-rgb), 1);
  --color-foreground-medium: rgba(var(--color-foreground-rgb), 0.7);
  --color-foreground-xlight: rgba(var(--color-foreground-rgb), 0.05);

  --color-accent-rgb: 183, 139, 107;
  --color-accent: rgba(var(--color-accent-rgb), 1);
  --color-accent-medium: rgba(var(--color-accent-rgb), 0.5);
  --color-accent-light: rgba(var(--color-accent-rgb), 0.1);
  --color-accent-xlight: rgba(var(--color-accent-rgb), 0.05);

  --color-background-rgb: 253, 252, 251;
  --color-background: rgba(var(--color-background-rgb), 1);
  --color-background-transparent: rgba(var(--color-background-rgb), 0);

  --font-size-normal: 16px;
  --font-size-large: 20px;
  --font-size-small: 13px;
  --font-size-xsmall: 11px;
  --font-size-title: 48px;

  --size-normal: 16px;
  --size-small: 8px;
  --size-xsmall: 4px;
  --size-xxsmall: 2px;
  --size-large: 32px;
  --size-xlarge: 48px;
  --size-xxlarge: 64px;

  --font-weight-normal: 400;
  --font-weight-bold: 500;
  --font-weight-black: 600;
  --font-family-default: Avenir, 'Work Sans', sans-serif;
  --font-family-monospace: ui-monospace, Menlo, Monaco, 'Cascadia Mono',
    'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace',
    'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --max-readable-width: 550px;
  --min-touch-size: 36px;

  --border-radius-normal: 12px;

  --hover-opacity: 0.5;
  --pressed-opacity: 0.3;
  --pressed-scale: 0.95;

  --anim-duration-long: 300ms;
  --anim-duration-normal: 150ms;
  --anim-duration-fast: 60ms;

  --sidebar-width: 20vw;

  --navbar-height: 60px;

  --post-header-vertical-padding: 128px;
}

@media (prefers-color-scheme: dark) {
  :root {
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: var(--font-family-default);
  font-size: var(--font-size-normal);
}

body {
  color: var(--color-foreground);
  background-color: var(--color-background);
}

.overlay-open {
  overflow: hidden;
}

.overlay-open body {
  overflow: hidden;
}

mux-player {
  --controls: none;
}

a {
  color: var(--color-accent);
  font-weight: var(--font-weight-bold);
  text-decoration: underline;
  text-decoration-color: var(--color-accent-light);
  transition: opacity ease var(--anim-duration-normal);
}

a:hover {
  opacity: var(--hover-opacity);
  transition-duration: var(--anim-duration-fast);
}

a:active {
  opacity: var(--pressed-opacity) !important;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

@media (max-width: 800px) {
  :root {
    --font-size-normal: 16px;
    --font-size-large: 20px;
    --font-size-small: 13px;
    --font-size-xsmall: 10px;
    --font-size-title: 36px;

    --size-normal: 14px;
    --size-small: 6px;
    --size-xsmall: 3px;
    --size-xxsmall: 2px;
    --size-large: 24px;
    --size-xlarge: 38px;
    --size-xxlarge: 48px;

    --post-header-vertical-padding: 100px;
  }
}

